ARC Opt in notification not shown.

As the profile id is not set, the notifications are never shown to user.
Instead they land in the notification center, and user needs to click
on the "1" icon to see it.

This CL fixes the issue by setting a correct profile id on the
notification.

TEST=Tested manually on a fresh profile.
BUG=629399

Review-Url: https://codereview.chromium.org/2160723004
Cr-Commit-Position: refs/heads/master@{#406428}

Former-commit-id: 3ae0dad4690b7579921cd503e6a863467ef27bfe